Change layout for my blog

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -10,7 +10,7 @@
   <% } %>
   <title>
     <% if (page.title){ %>
-      <%= page.title %> | <%= config.title %>
+      <%= page.title %>
     <% } else { %>
       <%= config.title %>
     <% } %>
