--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -80,6 +80,13 @@ pre
   border-radius: 2px
   white-space: nowrap
 
+h1.blog-title
+  text-align: center
+  margin-top: 60px
+
+.articles
+  margin-top: 40px
+
 .article-card
   padding-bottom: 20px
   &:first-child
@@ -88,11 +95,15 @@ pre
 h2.article-head
   font-size: 1.6em
   margin-bottom: 0
+  display: inline-block
 
 .article-head > a
   color: color-dark
   &:hover
     border-bottom: 2px solid color-primary
+
+.article-category
+  margin-left: 10px
 
 .article-date
   color: color-gray
