--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,4 +1,4 @@
-<div id="article-banner">
+<div id="article-banner" class="main">
   <h2>아놔 제목 뭘로하지</h2>
   <p class="post-date">한 학부생의 일기장</p>
 </div>
