--- a/source/css/_partial/about.styl
+++ b/source/css/_partial/about.styl
@@ -75,3 +75,60 @@
       color: #2aa9e0
     .icon-douban
       color: #00B51D
+.cv-container
+  margin: 60px auto
+  max-width: 850px
+.cv-title
+  text-align: center
+.experiences-item
+  margin: 30px 0
+.experiences-header
+  position: relative
+  display: block
+.experiences-title
+  display: inline-block
+  margin: 0
+  padding-left: 24px
+  &:before
+    position: absolute
+    left: 0px
+    top: 10.5px
+    content: ''
+    background-color: color-white
+    width: 8px
+    height: 8px
+    border: 2px solid color-primary
+    border-radius: 50%
+.experiences-period
+  margin-left: 16px
+.skills
+  margin-bottom: 16px
+.skills-type
+  margin: 0
+.skills-list
+  display: flex
+.skills-column
+  flex: 1
+.skills-item
+  position: relative
+  margin: 16px 0 16px 0
+.skills-name
+  display: inline-block
+  margin: 0
+  padding-left: 20px
+  &:before
+    position: absolute
+    top: 7px
+    left: 0px
+    content: ''
+    background-color: color-white
+    width: 6px
+    height: 6px
+    border: 2px solid color-primary
+    border-radius: 50%
+.skills-level
+  margin-left: 16px
+hr
+  border: 1px solid #e5e5e5
+  border-bottom: 0
+  margin: 60px 0
