--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -173,6 +173,9 @@ h2.article-head
       border-bottom: 1px solid color-white
       border-left: 1px solid color-white
 
+#article-banner.main
+  padding: 30vh 20px
+
 .post-article
   margin-top: 0
   width: 100%
