--- a/layout/diary.ejs
+++ b/layout/diary.ejs
@@ -1,6 +1,6 @@
 <div id="article-banner">
   <h2>Diary</h2>
-  <p class="post-date">학부생의 넋두리</p>
+  <p class="post-date">의식의 흐름대로</p>
 </div>
 <main class="app-body">
   <div class="articles">
