Sort posts by created date for Develop & Diary tabs

--- a/layout/develop.ejs
+++ b/layout/develop.ejs
@@ -4,29 +4,30 @@
 </div>
 <main class="app-body">
   <div class="articles">
+    <% function postSortFunc(post1, post2) { if (post1.date < post2.date) return 1; return -1;} %>
     <% site.categories.map(function(category, index) { %>
-      <% if (category.name == 'Develop') { %>
-        <% category.posts.map(function(post) { %>
-          <div>
-            <h2 class="article-head">
-              <a href="<%- url_for(post.path) %>"><%- post.title %></a>
-            </h2>
-          </div>
-          <p class="article-date"><%- date(post.date, "LL") %></p>
-          <% if (post.tags && post.tags.length) { %>
-          <%- partial('_partial/tag', { tags: post.tags }) %>
-          <% } %>
-          <div class="article-summary">
-            <% if (post.excerpt) { %>
-            <%- post.excerpt %>
-            <% } else { %>
-            <%- truncate(strip_html(post.content), { length: 150, omission: ' ...' }) %>
-            <% } %>
-          </div>
-          <a class="more" href="<%- url_for(post.path) %>"><%- theme.excerpt_link %></a>
-          </article>
-        <% }) %>
+    <% if (category.name == 'Develop') { %>
+    <% category.posts.data.sort(postSortFunc).map(function(post) { %>
+      <div>
+        <h2 class="article-head">
+          <a href="<%- url_for(post.path) %>"><%- post.title %></a>
+        </h2>
+      </div>
+      <p class="article-date"><%- date(post.date, "LL") %></p>
+      <% if (post.tags && post.tags.length) { %>
+      <%- partial('_partial/tag', { tags: post.tags }) %>
       <% } %>
+      <div class="article-summary">
+        <% if (post.excerpt) { %>
+        <%- post.excerpt %>
+        <% } else { %>
+        <%- truncate(strip_html(post.content), { length: 150, omission: ' ...' }) %>
+        <% } %>
+      </div>
+      <a class="more" href="<%- url_for(post.path) %>"><%- theme.excerpt_link %></a>
+      </article>
+    <% }) %>
+    <% } %>
     <% }) %>
 
     <% if (site.pages.length > 1){ %>
