Minor update for blog titles

--- a/layout/develop.ejs
+++ b/layout/develop.ejs
@@ -1,6 +1,6 @@
 <div id="article-banner">
   <h2>Develop</h2>
-  <p class="post-date">초보 개발자가 쓴 개발</p>
+  <p class="post-date">한 주니어 개발자의 삽질기</p>
 </div>
 <main class="app-body">
   <div class="articles">
