--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -87,6 +87,9 @@ h1.blog-title
 .articles
   margin-top: 40px
 
+.articles > .private
+  display: none
+
 .article-card
   padding-bottom: 20px
   &:first-child
