--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -1,6 +1,6 @@
 <div id="article-banner">
   <h2>Archives</h2>
-  <p class="post-date">나의 발자취</p>
+  <p class="post-date"></p>
 </div>
 <main class="app-body" id="archives">
   <% let years = {}; %>
