Add resume link in about page

--- a/layout/about.ejs
+++ b/layout/about.ejs
@@ -22,6 +22,7 @@
         </span>
       </a>
     <% } %>
+    <a href="/resume/resume_SuhwanJee_201811.pdf" download>Resume</a>
   </section>
 </div>
 
