Update thumbnail image

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -35,5 +35,5 @@
   <%- partial('_third-party/mathjax') %>
 </head>
 <div class="wechat-share">
-  <img src="/css/images/logo.png" />
+  <img src="<%= config.favicon || theme.favicon %>" />
 </div>
