--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -5,28 +5,32 @@
   <h1 class="blog-title">Recent Posts</h1>
   <div class="articles">
     <% page.posts.each(function(post) { %>
-    <article class="article-card">
-      <div>
-        <h2 class="article-head">
-          <a href="<%- url_for(post.path) %>"><%- post.title %></a>
-        </h2>
-        <% post.categories.each(function(category) { %>
-          <span class="article-category"><%= category.name %></span>
-        <% }) %>
-      </div>
-      <p class="article-date"><%- date(post.date, "LL") %></p>
-      <% if (post.tags && post.tags.length) { %>
-      <%- partial('_partial/tag', { tags: post.tags }) %>
+      <% var isAllowedCategory = false %>
+      <% post.categories.each(function(category) { if (category.name === 'Develop') { isAllowedCategory = true } }) %>
+      <% if (isAllowedCategory) { %>
+        <article class="article-card">
+          <div>
+            <h2 class="article-head">
+              <a href="<%- url_for(post.path) %>"><%- post.title %></a>
+            </h2>
+            <% post.categories.each(function(category) { %>
+              <span class="article-category"><%= category.name %></span>
+            <% }) %>
+          </div>
+          <p class="article-date"><%- date(post.date, "LL") %></p>
+          <% if (post.tags && post.tags.length) { %>
+          <%- partial('_partial/tag', { tags: post.tags }) %>
+          <% } %>
+          <div class="article-summary">
+            <% if (post.excerpt) { %>
+            <%- post.excerpt %>
+            <% } else { %>
+            <%- truncate(strip_html(post.content), { length: 150, omission: ' ...' }) %>
+            <% } %>
+          </div>
+          <a class="more" href="<%- url_for(post.path) %>"><%- theme.excerpt_link %></a>
+        </article>
       <% } %>
-      <div class="article-summary">
-        <% if (post.excerpt) { %>
-        <%- post.excerpt %>
-        <% } else { %>
-        <%- truncate(strip_html(post.content), { length: 150, omission: ' ...' }) %>
-        <% } %>
-      </div>
-      <a class="more" href="<%- url_for(post.path) %>"><%- theme.excerpt_link %></a>
-    </article>
     <% }) %>
   </div>
 </main>
