Change blog design

--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,8 +1,7 @@
 <div id="article-banner" class="main">
-  <h2>Towards the Better UX for Developers</h2>
+  <h2>Recent Posts</h2>
 </div>
 <main class="app-body">
-  <h1 class="blog-title">Recent Posts</h1>
   <div class="articles">
     <% page.posts.each(function(post) { %>
       <% var isAllowedCategory = false %>
