Add link to notion introduction page

--- a/layout/about.ejs
+++ b/layout/about.ejs
@@ -14,15 +14,7 @@
     <p class="description"><%- theme.about.description %></p>
   <% } %>
   <section class="share-icons">
-    <% if (theme.about.github_username) { %>
-      <a class="icon-github" href="https://github.com/<%- theme.about.github_username %>" target="_blank">
-        <span class="fa-stack fa-lg">
-          <i class="fa fa-circle fa-stack-2x"></i>
-          <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-        </span>
-      </a>
-    <% } %>
-    <a href="/resume/resume_SuhwanJee_201811.pdf" download>Resume</a>
+    <a href="https://www.notion.so/projectsuhwan/Who-am-I-f97ad009c20841678733d335044fc842" target="_blank">Who am I?</a>
   </section>
 </div>
 
