--- a/source/css/_partial/markdown.styl
+++ b/source/css/_partial/markdown.styl
@@ -67,6 +67,7 @@
     text-align: center
     font-size: 0.9em
   figure
+    max-width: 700px
     background: color-background
     padding: 0 10px
     border-radius: 2px
