--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -3,7 +3,7 @@
 </div>
 <main class="app-body">
   <div class="articles">
-    <% page.posts.each(function(post) { %>
+    <!-- <% page.posts.each(function(post) { %>
       <% var isAllowedCategory = false %>
       <% post.categories.each(function(category) { if (category.name === 'Develop') { isAllowedCategory = true } }) %>
       <% if (isAllowedCategory) { %>
@@ -30,6 +30,31 @@
           <a class="more" href="<%- url_for(post.path) %>"><%- theme.excerpt_link %></a>
         </article>
       <% } %>
+    <% }) %> -->
+    <% function postSortFunc(post1, post2) { if (post1.date < post2.date) return 1; return -1;} %>
+    <% site.categories.map(function(category, index) { %>
+    <% if (category.name == 'Develop') { %>
+    <% category.posts.data.sort(postSortFunc).slice(0, 5).map(function(post) { %>
+      <div>
+        <h2 class="article-head">
+          <a href="<%- url_for(post.path) %>"><%- post.title %></a>
+        </h2>
+      </div>
+      <p class="article-date"><%- date(post.date, "LL") %></p>
+      <% if (post.tags && post.tags.length) { %>
+      <%- partial('_partial/tag', { tags: post.tags }) %>
+      <% } %>
+      <div class="article-summary">
+        <% if (post.excerpt) { %>
+        <%- post.excerpt %>
+        <% } else { %>
+        <%- truncate(strip_html(post.content), { length: 150, omission: ' ...' }) %>
+        <% } %>
+      </div>
+      <a class="more" href="<%- url_for(post.path) %>"><%- theme.excerpt_link %></a>
+      </article>
+    <% }) %>
+    <% } %>
     <% }) %>
   </div>
 </main>
