소개 페이지 약간 수정

--- a/layout/about.ejs
+++ b/layout/about.ejs
@@ -14,7 +14,7 @@
     <p class="description"><%- theme.about.description %></p>
   <% } %>
   <section class="share-icons">
-    <a href="https://www.notion.so/projectsuhwan/Who-am-I-f97ad009c20841678733d335044fc842" target="_blank">Who am I?</a>
+    <a href="https://www.notion.so/projectsuhwan/Who-am-I-f97ad009c20841678733d335044fc842" target="_blank">블로그 작성자 소개 페이지</a>
   </section>
 </div>
 
